# gps-gui-rs

./: .gitignore  Cargo.toml  ISSUES.md  README.md  TODO.md  gps-config.toml  manifest.yaml
android/: BleBridge.java  LocationBridge.java  build-dex.sh
assets/: ble-bridge.dex  location-bridge.dex
docs/: ui.md
src/: app.rs  compass.rs  config.rs  gps.rs  lib.rs  main.rs  marker.rs  offline.rs  points.rs  radio.rs  tiles.rs
src/app/ui/: map.rs  mod.rs  pages.rs
src/ble/: android.rs  desktop.rs  mod.rs
