[package]
name = "gps-gui-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GPS tracking GUI with offline maps and (later) BLE coordinate reception"

# Desktop builds link the [[bin]] against the lib (rlib); Android builds load the
# cdylib from a NativeActivity. One crate, both targets.
[lib]
name = "gps_gui_rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gps-gui-rs"
path = "src/main.rs"

[dependencies]
egui = "0.35"
walkers = "0.56"
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.35"
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
# Android needs the wgpu renderer. native-activity works with the no-Java
# xbuild / cargo-apk flow; switch to "android-game-activity" if you build the
# Gradle/GameActivity project instead.
eframe = { version = "0.35", default-features = false, features = [
    "android-native-activity",
    "wgpu",
    "default_fonts",
] }
egui-winit = "0.35"
android_logger = "0.15"
# Reading the phone's GNSS via Android LocationManager over JNI. The JVM and
# Activity pointers come from AndroidApp, so ndk-context is not needed.
jni = "0.21"

# Read by cargo-apk / cargo-ndk tooling. INTERNET is needed for online tiles;
# the BLUETOOTH/LOCATION permissions are here for the BLE source added later.
[package.metadata.android]
package = "rs.gps.gui"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_FINE_LOCATION"
[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_SCAN"
[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_CONNECT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
