[package]
name = "gps-gui-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GPS tracking GUI with offline maps and (later) BLE coordinate reception"

# Desktop builds link the [[bin]] against the lib (rlib); Android builds load the
# cdylib from a NativeActivity. One crate, both targets.
[lib]
name = "gps_gui_rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "gps-gui-rs"
path = "src/main.rs"

[dependencies]
egui = "0.35"
walkers = "0.56"
log = "0.4"
# Loading the TOML config file (marker colors, more later). Both pure Rust, so
# they cross-compile to Android unchanged.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# SVG button icons (resvg is pure Rust, so it cross-compiles to Android).
egui_extras = { version = "0.35", features = ["svg"] }
# Shared BLE protocol with the esp32c3-gps firmware (lives in the same parent
# directory).
gps-proto = { path = "../gps-proto" }
# Board-specific BLE extensions and the ESP<->WIO telemetry format served by
# the esp32c6-gps board (no_std, cross-compiles unchanged), used by the Status
# page to decode the telemetry and log characteristics.
midair-proto = { path = "../esp32c6-gps/proto" }
# Offline region downloads reuse the exact HTTP-cache stack walkers uses (same
# crate versions, same cache format), so pre-fetched tiles land in the cache
# the map already reads from. All already in the dependency tree via walkers.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
reqwest-middleware = "0.4"
http-cache-reqwest = "0.16"
tokio = { version = "1", features = ["rt"] }
futures = "0.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = "0.35"
env_logger = "0.11"
# BLE central for the ESP32-C3 GPS beacon on desktop (Linux/bluez). Android
# uses a JNI bridge instead (src/ble/android.rs).
btleplug = "0.12"
uuid = "1"

[target.'cfg(target_os = "android")'.dependencies]
# Android needs the wgpu renderer. native-activity works with the no-Java
# xbuild / cargo-apk flow; switch to "android-game-activity" if you build the
# Gradle/GameActivity project instead.
eframe = { version = "0.35", default-features = false, features = [
    "android-native-activity",
    "wgpu",
    "default_fonts",
] }
egui-winit = "0.35"
android_logger = "0.15"
# Reading the phone's GNSS via Android LocationManager over JNI. The JVM and
# Activity pointers come from AndroidApp, so ndk-context is not needed.
jni = "0.21"
# Compass heading from the native rotation-vector sensor (no JNI/Java needed).
ndk-sys = "0.6"

# Read by cargo-apk / cargo-ndk tooling. INTERNET is needed for online tiles;
# the BLUETOOTH/LOCATION permissions are here for the BLE source added later.
[package.metadata.android]
package = "rs.gps.gui"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 33

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_FINE_LOCATION"
[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_SCAN"
[[package.metadata.android.uses_permission]]
name = "android.permission.BLUETOOTH_CONNECT"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
